--- a/public/main.html
+++ b/public/main.html
@@ -14,5 +14,6 @@
         in a aperiam voluptatibus dicta qui doloribus libero suscipit optio delectus voluptas voluptatem impedit!</p>
 
         <script src="main.js"></script>
+        <script src="test.js"></script>
 </body>
 </html>
